--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^4.0.6
   get: ^4.6.5
   cached_network_image: ^3.2.1
+  fijkplayer: ^0.10.1
 
 dev_dependencies:
   flutter_test:
