--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cached_network_image: ^3.2.1
   fijkplayer: ^0.10.1
   infinite_scroll_pagination: ^3.2.0
+  shared_preferences: ^2.0.15
+  streaming_shared_preferences: ^2.0.0
 
 dev_dependencies:
   flutter_test:
