--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   infinite_scroll_pagination: ^3.2.0
   shared_preferences: ^2.0.15
   streaming_shared_preferences: ^2.0.0
+  pull_to_refresh_notification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+      - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
