--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  dio: ^4.0.6
   get: ^4.6.5
   cached_network_image: ^3.2.1
   fijkplayer: ^0.10.1
   infinite_scroll_pagination: ^3.2.0
-  shared_preferences: ^2.0.15
-  streaming_shared_preferences: ^2.0.0
   pull_to_refresh_notification: ^2.3.0
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
