--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   infinite_scroll_pagination: ^3.2.0
   pull_to_refresh_notification: ^2.3.0
   get_storage: ^2.0.3
+  wakelock: ^0.6.1+2
 
 dev_dependencies:
   flutter_test:
