--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   infinite_scroll_pagination: ^3.2.0
   get_storage: ^2.0.3
   wakelock: ^0.6.1+2
+  easy_refresh: ^3.0.0+3
 
 dev_dependencies:
   flutter_test:
