--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   fijkplayer: ^0.10.1
   get_storage: ^2.0.3
   wakelock: ^0.6.1+2
-  easy_refresh: ^3.0.0+3
+  easy_refresh: ^3.0.2+2
+  package_info_plus: ^1.4.2
 
 dev_dependencies:
   flutter_test:
