fix: back to dio

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   wakelock: ^0.6.1+2
   easy_refresh: ^3.0.2+2
   package_info_plus: ^1.4.2
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
