--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   easy_refresh: ^3.0.2+2
   package_info_plus: ^1.4.2
   dio: ^4.0.6
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
